# holochain-prefix-index

./: Cargo.toml  flake.nix  package-lock.json
dnas/demo/zomes/integrity/demo/: Cargo.toml
lib/prefix_index/src/: prefix_index.rs  utils.rs  validate.rs
