[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*", "lib/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.4.0-beta-dev.12"
hdk = "=0.3.0-beta-dev.16"
serde = "=1.0.166"

[workspace.dependencies.demo]
path = "dnas/demo/zomes/coordinator/demo"

[workspace.dependencies.demo_integrity]
path = "dnas/demo/zomes/integrity/demo"

[workspace.dependencies.prefix_index]
path = "lib/prefix_index"
